--- a/package.json
+++ b/package.json
@@ -55,5 +55,13 @@
     "transformIgnorePatterns": [
       "node_modules/(?!@shotgunjed)/"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
+    "msw": "^2.7.3",
+    "react-test-renderer": "^19.0.0"
   }
 }
